--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="service-text">
                                 <h3>Magicas</h3>
                                 <p>
-                                    Para ilustrar ejemplos y captivar a la audiencia
+                                    Para ilustrar ejemplos y cautivar a la audiencia
                                 </p>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
                             <div class="service-text">
                                 <h3>Sensoriales</h3>
                                 <p>
-                                    Generan emoción a traves de los sentidos
+                                    Generan emoción a través de los sentidos
                                 </p>
                             </div>
                         </div>
