--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="container banner-text">
                     <p>
-                        Durante los últimos 15 años, mi pasión por el mundo lúdico y el aprendizaje me llevó a estudiar conferencias, charlas, talleres y la dinámica del juego. Esta búsqueda me llevó a explorar una variedad de recursos, desde libros hasta videos y revistas de negocios. Con una década de experiencia como docente universitario y una formación en Contaduría Pública y Administración, decidí dar un giro en mi carrera y ahora me dedico a ofrecer charlas, conferencias y talleres vivenciales, tanto en interiores como al aire libre. Mi objetivo es proporcionar momentos memorables para aquellos que buscan aprender y crecer, ya sea por elección propia o como parte de su desarrollo profesional.
+                        Durante los últimos 15 años, mi pasión por el mundo lúdico y la docencia me empujó a estudiar como unir las habilidades gerenciales con dinámicas de juegos. Esta búsqueda me llevó a explorar una variedad de recursos, desde libros hasta videos y revistas de negocios. Con una década de experiencia como docente universitario y una formación en Contaduría Pública y Administración, decidí dar un giro en mi carrera para dedicarme a ofrecer, conferencias, charlas y talleres vivenciales para todo tipo de público. Mi objetivo es proporcionar momentos memorables para aquellos que buscan aprender y crecer, ya sea por elección propia o como parte de su desarrollo profesional.
                     </p>
                     <a class="btn" href="https://api.whatsapp.com/send?phone=542614728799" >Contacto</a>
                 </div>
