--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="#home" class="nav-item nav-link active">Home</a>
+                        <a href="#contacto" class="nav-item nav-link active">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +154,7 @@
 
 
         <!-- Footer Start -->
-        <div class="footer wow fadeIn" data-wow-delay="0.3s">
+        <div class="footer wow fadeIn" data-wow-delay="0.3s" id="contacto">
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
